--- a/case3/index.html
+++ b/case3/index.html
@@ -7,8 +7,8 @@
     Case Problem 3
     
     Austen Vynes home page
-    Author: 
-    Date:   
+    Author: Aspen Smith
+    Date:   1-21-2020
 
     Filename: ja_vynes.html
    -->
